--- a/count_cat.ipynb
+++ b/count_cat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,11 +216,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Đảm bảo matplotlib hiển thị inline trong notebook (nếu dùng Jupyter)\n",
     "%matplotlib inline\n",
     "\n",
     "# Đọc ảnh\n",
-    "image_path = 'cat.jpg'  # Thay bằng đường dẫn đến ảnh của bạn\n",
+    "image_path = 'cat.jpg'\n",
     "image = cv2.imread(image_path)\n",
     "if image is None:\n",
     "    print(\"Không thể đọc ảnh. Vui lòng kiểm tra đường dẫn.\")\n",
@@ -251,7 +250,7 @@
     "                               cv2.THRESH_BINARY_INV, 11, 2)\n",
     "\n",
     "# Bước 5: Loại bỏ lông và chi tiết nhỏ bằng Morphological Opening\n",
-    "kernel = np.ones((2, 2), np.uint8)  # Kernel 2x2 để xóa nhẹ nhàng\n",
+    "kernel = np.ones((2, 2), np.uint8)\n",
     "opened = cv2.morphologyEx(binary, cv2.MORPH_OPEN, kernel, iterations=1)\n",
     "\n",
     "# Hiển thị ảnh sau khi loại bỏ lông và chi tiết nhỏ\n",
@@ -266,12 +265,12 @@
     "\n",
     "# Lần 1: Phát hiện các vòng tròn có viền rất đậm (param2 cao)\n",
     "circles_strong = cv2.HoughCircles(blurred, cv2.HOUGH_GRADIENT, dp=1, minDist=5,\n",
-    "                                  param1=50, param2=30, minRadius=5, maxRadius=10)  # Bán kính 5-10 pixel\n",
+    "                                  param1=50, param2=30, minRadius=5, maxRadius=10)\n",
     "if circles_strong is not None:\n",
     "    circles_strong = np.uint16(np.around(circles_strong[0]))\n",
     "    for x, y, r in circles_strong:\n",
-    "        r_adjusted = int(r * 1.2)  # Tăng bán kính để xóa triệt để\n",
-    "        cv2.circle(circle_removed, (x, y), r_adjusted, 0, -1)  # Xóa hình tròn bằng cách điền màu đen\n",
+    "        r_adjusted = int(r * 1.2) \n",
+    "        cv2.circle(circle_removed, (x, y), r_adjusted, 0, -1) \n",
     "\n",
     "# Hiển thị ảnh sau khi xóa các vòng tròn có viền đậm (lần 1)\n",
     "plt.figure(figsize=(6, 6))\n",
@@ -282,12 +281,12 @@
     "\n",
     "# Lần 2: Phát hiện các vòng tròn có viền đậm vừa phải (param2 thấp hơn)\n",
     "circles_medium = cv2.HoughCircles(blurred, cv2.HOUGH_GRADIENT, dp=1, minDist=5,\n",
-    "                                  param1=50, param2=15, minRadius=3, maxRadius=8)  # Bán kính 3-8 pixel\n",
+    "                                  param1=50, param2=15, minRadius=3, maxRadius=8)\n",
     "if circles_medium is not None:\n",
     "    circles_medium = np.uint16(np.around(circles_medium[0]))\n",
     "    for x, y, r in circles_medium:\n",
-    "        r_adjusted = int(r * 1.2)  # Tăng bán kính để xóa triệt để\n",
-    "        cv2.circle(circle_removed, (x, y), r_adjusted, 0, -1)  # Xóa hình tròn bằng cách điền màu đen\n",
+    "        r_adjusted = int(r * 1.2) \n",
+    "        cv2.circle(circle_removed, (x, y), r_adjusted, 0, -1) \n",
     "\n",
     "# Hiển thị ảnh sau khi xóa các vòng tròn có viền đậm (lần 2)\n",
     "plt.figure(figsize=(6, 6))\n",
@@ -322,9 +321,9 @@
     "\n",
     "# Tạo một ảnh mới để lưu kết quả sau khi xóa các vùng trắng nhỏ\n",
     "filtered_white = np.zeros_like(bold_white)\n",
-    "for i in range(1, num_labels):  # Bỏ qua nền (label 0)\n",
+    "for i in range(1, num_labels): \n",
     "    area = stats[i, cv2.CC_STAT_AREA]\n",
-    "    if area >= 300:  # Giữ lại các vùng trắng có diện tích >= 300 pixel\n",
+    "    if area >= 300:\n",
     "        filtered_white[labels == i] = 255\n",
     "\n",
     "# Hiển thị ảnh sau khi loại bỏ các vùng trắng nhỏ\n",
@@ -364,11 +363,10 @@
     "# Đếm số vùng đen có diện tích trên 600 pixel\n",
     "filtered_cats = 0\n",
     "output_image = image_rgb.copy()\n",
-    "for i in range(1, num_labels):  # Bỏ qua nền (label 0)\n",
+    "for i in range(1, num_labels): \n",
     "    x, y, w, h, area = stats[i]\n",
-    "    if area > 600:  # Đếm các vùng đen có diện tích > 600 pixel\n",
+    "    if area > 600:  \n",
     "        filtered_cats += 1\n",
-    "        # Vẽ hình chữ nhật bao quanh vùng đen (lỗ bên trong mèo)\n",
     "        cv2.rectangle(output_image, (x, y), (x+w, y+h), (0, 255, 0), 2)\n",
     "\n",
     "# In kết quả\n",
@@ -393,7 +391,7 @@
     "print(\"\\nThống kê diện tích các vùng đen (lỗ bên trong mèo):\")\n",
     "for i in range(1, num_labels):\n",
     "    area = stats[i, cv2.CC_STAT_AREA]\n",
-    "    if area > 600:  # Đếm các vùng đen có diện tích > 600 pixel\n",
+    "    if area > 600: \n",
     "        print(f\"Vùng đen {i}: Diện tích = {area}\")"
    ]
   }
